--- a/styles.css
+++ b/styles.css
@@ -15,20 +15,22 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: gray;
+  background-color: rgb(230, 239, 246)
 
 }
 main {
   padding: 1rem;
+}
+.header-body{
+  color:hsl(218, 22%, 67%);
+
 }
 
 h1 {
   font-weight: bold;
   font-size: 1.5rem;
 }
-p{
-  color:hsl(204, 43%, 93%);
-}
+
 .header {
   color: hsl(179, 62%, 43%);
 }
@@ -43,17 +45,24 @@ p{
 
 
 .bottom-left {
-  background-color: hsl(179, 60%, 55%);
-  color: white;
+  background-color: rgb(43, 179, 177);
+  color:  hsl(204, 43%, 93%);
   height: 20rem;
   width:100%;
   padding:10%;
   align-content: center;
 
 }
+.dollar-amount{
+  font-size: 2rem;
+  font-weight: 700;
+}
+.per-month{
+  color:rgb(74, 190, 189);
+}
 .bottom-right {
-  background-color:  hsl(179, 84%, 55%);
-  color: white;
+  background-color:  rgb(74, 190, 189);
+  color:  hsl(204, 43%, 93%);
   height: 20rem;
   width:100%;
   padding:10% 20%;
